fix: text align in post lists

--- a/static/style.css
+++ b/static/style.css
@@ -222,6 +222,7 @@ hr {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    text-align: left;
 }
 
 .list-post {
